fix z-index

--- a/src/less/blocks/page.less
+++ b/src/less/blocks/page.less
@@ -1,8 +1,8 @@
 .page{
     position: relative;
     // background: #363636;
-    background:@color_black;
-    z-index: 1;
+    // background:@color_black;
+    // z-index: 1;
     // margin-bottom: 200px;
     height: 100%;
     // min-height: 100vh;
